--- a/config/database.yml
+++ b/config/database.yml
@@ -5,21 +5,24 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
+  adapter: mysql
+  username: root
+  password: cruel1293
+  host: localhost
   pool: 5
   timeout: 5000
 
 development:
   <<: *default
-  database: db/prueba.sqlite3
+  database: development_sosoft
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/prueba_test.sqlite3
+  database: test_sossoft
 
 production:
   <<: *default
-  database: db/pro.sqlite3
+  database: production_sosoft
