--- a/config/database.yml
+++ b/config/database.yml
@@ -5,25 +5,21 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: mysql
-  username: root
-  password: ddDD//99
-  host: localhost
+  adapter: sqlite3
   pool: 5
   timeout: 5000
-  
 
 development:
   <<: *default
-  database: development_sosoft
+  database: db/data_estimacion.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: test_sossoft
+  database: db/tests_estimacion.sqlite3
 
 production:
   <<: *default
-  database: production_sosoft
+  database: db/production_estimacion.sqlite3
